<resources>
    <string name="app_name">注定</string>
    <string name="facebook_app_id">1929612040615785</string>
    <string name="fb_login_protocol_scheme">fb1929612040615785</string>
    <string name="login_with_facebook">Facebook登录</string>
    <string name="user_data_name_hint">那么怎么称呼您？</string>
    <string name="user_data_sex_hint">请选择您的性别？</string>
    <string name="user_data_name_hint2">昵称不能小于两个字符</string>
    <string name="user_data_birth_hint">请告知我们您的出生年月以及出生时间。</string>
    <string name="user_data_affirm_hint">请确认您的个人信息是否正确无误？</string>
    <string name="doubt">在您首次登录[注定]时，需要填写您的真实信息，我们会根据这些信息精确地为您匹配灵魂伴侣并免费赠送一次基础的命书测算。</string>
    <string name="affirm">确认</string>
    <string name="no_problem">没有问题</string>
    <string name="konw">我知道了</string>
    <string name="cancel">取消</string>
    <string name="accomplish">完成</string>
    <string name="name">姓名</string>
    <string name="nickname">暱称</string>
    <string name="birth">出生日期</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="xingsu">星宿</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="timezone">时区</string>
    <string name="load_horoscope">请稍等，正在为您生成命书...</string>
    <string name="list_of_popular">人气榜</string>
    <string name="location">地址</string>
    <string name="friend">好友</string>
    <string name="temporary_session">临时会话</string>
    <string name="spirit">心灵</string>
    <string name="body">肉体</string>
    <string name="soul">灵魂</string>
    <string name="progress">匹配度</string>
    <string name="clean_photos">人擦过她的照片</string>
    <string name="remark">设置备注</string>
    <string name="remark_name">备注名</string>
    <string name="life_book">我与TA</string>
    <string name="ta_life_book">TA的命书</string>
    <string name="send_message">传讯息</string>
    <string name="user_nickname">暱称 ：</string>
    <string name="user_location">距离 ：</string>
    <string name="user_signature">签名 ：</string>
    <string name="character">TA的个性</string>
    <string name="character1">性格</string>
    <string name="comment">相处模式</string>
    <string name="courting">如何追求TA</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="time">时</string>
    <string name="txt_personal_analysis">已完成计算您的专属命书</string>
    <string name="txt_horoscope">星座</string>
    <string name="text_harmony_zodiac">合拍生肖</string>
    <string name="txt_zodiac">生肖</string>
    <string name="txt_harmony_zodiac">合拍生肖</string>
    <string name="txt_star">人命卦</string>
    <string name="txt_harmony_star">合拍命卦</string>
    <string name="txt_ziwei">紫微斗数命宫</string>
    <string name="txt_harmony_ziwei">合拍命格</string>
    <string name="txt_numerology">生命灵数命数</string>
    <string name="txt_harmony_numerology">合拍灵数</string>
    <string name="txt_bazi">子平八字</string>
    <string name="txt_start_use">开始使用</string>
    <string name="txt_shop_lifebook_item1">当前用户</string>
    <string name="txt_shop_lifebook_item2">切换用户</string>
    <string name="txt_shop_lifebook_item3">添加用户</string>
    <string name="item1">聊天</string>
    <string name="item2">星圈</string>
    <string name="item3">匹配</string>
    <string name="item4">商店</string>
    <string name="item5">个人</string>
    <string name="change_user_data">更改个人信息</string>
    <string name="address_list">通讯录</string>
    <string name="address_chat">好友聊天</string>
    <string name="text_hint">提示</string>
    <string name="press_again_exit">再次点击退出</string>
    <string name="no_friend_number">您的好友位置已被充满，\n请扩充后再来发送好友请求吧。</string>
    <string name="my_add_friend">要向name发送好友请求吗？您还剩馀num个好友位置。（对方同意才能成为您的好友）</string>
    <string name="send_success">好友请求发送成功！请等待对方同意。</string>
    <string name="send_defeated">好友请求发送失败，您的好友位置已被充满。</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lifebook">两小无猜</string>
    <string name="error_gif">长宽不小于 %1$dpx，且大小不超过 %2$sM。</string>
    <string name="permission_request_denied">需要相应的权限</string>
    <string name="Are_refuse_with">正在拒绝……</string>
    <string name="Refuse_with_failure">拒绝失败:</string>
    <string name="multi_device_contact_accept">接受%s的好友邀请[remote]</string>
    <string name="multi_device_contact_decline">拒绝%s的好友邀请[remote]</string>
    <string name="multi_device_contact_add">发送好友邀请给%s[remote]</string>
    <string name="multi_device_contact_ban">加%s到黑名单[remote]</string>
    <string name="multi_device_contact_allow">移除%s从黑名单[remote]</string>
    <string name="foreseers_add_friend">添加好友</string>
    <string name="foreseers_whether_add_friend">是否确认添加这个好友</string>
    <string name="foreseers_confirm">确定</string>
    <string name="foreseers_cancel">取消</string>
    <string name="foreseers_ablum">相册</string>
    <string name="foreseers_users">人气用户</string>
    <string name="foreseers_peep">偷看头像</string>
    <string name="foreseers_my_vip">我的会员</string>
    <string name="foreseers_destined_vip">注定会员：</string>
    <string name="foreseers_expire_vip">到期</string>
    <string name="foreseers_destined">注定会员</string>
    <string name="foreseers_renew">点击选择续费时长</string>
    <string name="foreseers_day">天</string>
    <string name="foreseers_destined_vip_pre">注定会员特权</string>
    <string name="foreseers_vip_id">会员标识</string>
    <string name="foreseers_who_see_me">谁看过我</string>
    <string name="foreseers_who_catch_me">谁擦过我</string>
    <string name="foreseers_everyday">每日擦子</string>
    <string name="foreseers_infinite">无限栏位</string>
    <string name="foreseers_apply_msg">申请与通知</string>
    <string name="foreseers_system_setting">系统设置</string>
    <string name="foreseers_cache_manage">缓存管理</string>
    <string name="foreseers_cache_clean">清理缓存</string>
    <string name="foreseers_clean_temp_record">清空临时会话记录</string>
    <string name="foreseers_clean_friend_record">清空好友聊天记录</string>
    <string name="foreseers_id_secure">账号与安全</string>
    <string name="foreseers_blacklist">黑名单</string>
    <string name="foreseers_fortunetelling">命书测算</string>
    <string name="foreseers_idea_feedback">意见与反馈</string>
    <string name="foreseers_about_us">关于我们</string>
    <string name="foreseers_log_out">退出登录</string>
    <string name="foreseers_save">保存</string>
    <string name="foreseers_rename">更改签名</string>
    <string name="foreseers_welcome">欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语欢迎语</string>
    <string name="foreseers_detailed_analysis">我与TA的详细分析</string>
    <string name="foreseers_index">登对指数</string>
    <string name="foreseers_match_degree_percent">匹配度35%</string>
    <string name="foreseers_choose_photo">请选择一张照片作为您的头像。</string>
    <string name="foreseers_user_nickname">用户暱称</string>
    <string name="foreseers_match_degree">匹配度</string>
    <string name="foreseers_seven_day">成为好友7天后可查看</string>
    <string name="foreseers_thirty_day">成为好友30天后可查看</string>
    <string name="foreseers_all">全部</string>
    <string name="foreseers_add_friends">好友扩充</string>
    <string name="foreseers_special_vip_id">特殊会员标识</string>
    <string name="foreseers_discount">8折</string>
    <string name="foreseers_point_three">¥0.3/天</string>
    <string name="foreseers_point_four">¥0.4/天</string>
    <string name="foreseers_point_five">¥0.5/天</string>
    <string name="foreseers_expand_friends">扩充好友</string>
    <string name="foreseers_delete_friends">删除好友</string>
    <string name="foreseers_ensure_del_friends">是否确认删除这个好友</string>
    <string name="foreseers_del_photo">删除照片</string>
    <string name="foreseers_ensure_del_photo">是否确认删除这张照片</string>
    <string name="foreseers_wipe_photo">擦照片</string>
    <string name="foreseers_ensure_wipe">是否使用擦子</string>
    <string name="foreseers_nearby">附近的人</string>
    <string name="foreseers_my_info">我的资料</string>
    <string name="foreseers_my_album">我的相册</string>
    <string name="foreseers_personal_info">个人信息</string>
    <string name="foreseers_nickname">昵称</string>
    <string name="foreseers_catch_me">擦过我</string>
    <string name="foreseers_vip_remain">VIP剩余</string>
    <string name="foreseers_lifebook">每日运势</string>
    <string name="foreseers_choose_open_time">选择开通时间</string>
    <string name="foreseers_three_six_day">360天</string>
    <string name="foreseers_overbalance">超值</string>
    <string name="foreseers_open">开通</string>
    <string name="foreseers_ninety_day">90天</string>
    <string name="foreseers_thirty">30天</string>
    <string name="foreseers_prop_wipe">道具擦子</string>
    <string name="foreseers_advance_see_photo">提前查看对方头像</string>
    <string name="foreseers_two_hundred_num">200个</string>
    <string name="foreseers_ninety_num">90个</string>
    <string name="foreseers_thirty_num">30个</string>
    <string name="foreseers_measure">测算</string>
    <string name="foreseers_developing">(开发中)</string>
    <string name="foreseers_gender_scope">性别范围</string>
    <string name="foreseers_age_scope">年龄范围</string>
    <string name="foreseers_age">岁</string>
    <string name="foreseers_location">距离</string>
    <string name="foreseers_seven_killed">七杀</string>
    <string name="foreseers_first_meet">一见如故</string>
    <string name="foreseers_lunar">农曆</string>
    <string name="foreseers_catch_you">让对方一眼发现你</string>
    <string name="foreseers_ten_per_day">每日赠送20擦子</string>
    <string name="foreseers_look_TA">快去偷看心仪的TA</string>
    <string name="foreseers_infinate_priends_num">无限好友栏位</string>
    <string name="foreseers_follow_your_heart">随心添加不受限制</string>
    <string name="foreseers_who_see_you">让你知道谁曾查看过你</string>
    <string name="foreseers_crush_on_you">爲你心动</string>
    <string name="foreseers_who_see_you_photo">让你知道谁偷看了你的头像</string>
    <string name="foreseers_immediately_TA">立即去撩TA</string>
    <string name="foreseers_about_app_name">关于注定</string>
    <string name="foreseers_version">版本V</string>
    <string name="foreseers_about_content">\t玄人文化企业有限公司(下称玄人)为一间新世代的企业，将多年来的中西玄学术数知识和数据系统化，再作出有效分析，从而得出更准确更有效的结果，除此之外，更会提供一站网上以及智能手机应用程式平台，供普罗大众使用，大家可以利用该平台寻找心仪的玄学服务，无论一般文字咨询，以至一对一的视像面谈，一一都可以在玄人找到。
 \t中西玄学文化实在博大精深，有见及此，玄人还会提供网上学习平台，将知识推广至更阔的层面，无远弗届，不论求问者，服务提供者，从此都不会再受到地域及时间限制，无论身处地球上任何一个角落，只要一机在手，随时都能够轻鬆地接触玄学，令玄学的普世价值渐渐重回正轨。"
                </string>
    <string name="foreseers_terms_conditions">《条款细则》</string>
    <string name="foreseers_and">和</string>
    <string name="foreseers_privacy_policy">《隐私政策》</string>
    <string name="foreseers_terms">注定条款细则</string>
    <string name="foreseers_opinion_feekback">意见与反馈</string>
    <string name="foreseers_please_opinion">请详细描述问题和意见</string>
    <string name="foreseers_submit">提交</string>
    <string name="foreseers_became_vip_see">成为会员后可查看</string>
    <string name="foreseers_refuse">拒绝</string>
    <string name="at_your_in_group">%s @ you in group chat</string>
    <string name="foreseers_clean_photo">擦看照片</string>
    <string name="foreseers_ensure_clean_photo">是否确认擦看这张照片</string>
    <string name="foreseers_inform">举报</string>
    <string name="foreseers_report_easons">创建举报理由</string>
    <string name="foreseers_report_easons_hint">请详细描述你要举报该用户的理由</string>
    <string name="open_vip">开通会员</string>
    <string name="free_charge">免费</string>
    <string name="free_buy">buy</string>
    <string name="free_unlock">unlock</string>
    <string name="text_sign">This guy is lazy. He doesn\'t write anything</string>
    <string name="text_vip">vip</string>
    <string name="text_lifebook_content1">共&amp;项，\n免费查看</string>
    <string name="text_lifebook_content2">共&amp;项，未购买</string>
    <string name="text_lifebook_content3">共&amp;项，已购买</string>
    <string name="text_look">查看</string>
    <string name="title_outline">命书概要</string>
    <string name="text_go_lifebook">进入命书</string>
    <string name="text_long">长度最小为二</string>
    <string name="text_err">网络连接失败</string>
    <string name="everyday">每日签到</string>
    <string name="everyday1">每日签到可以获得擦子</string>
    <string name="everyday11">擦子用于看其他用户相片</string>
    <string name="everyday_ok">点我签到</string>
    <string name="everyday_text">恭喜你获得num个擦子！</string>
</resources>