<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_linelayout"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreseers_delete_friends"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foreseers_ensure_del_friends"
        android:layout_marginTop="28dp"
        android:layout_gravity="center"
        android:textSize="@dimen/sp_16"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center">
        <Button
            android:id="@+id/button_ok"
            android:layout_width="115dp"
            android:layout_height="39dp"
            android:text="@string/foreseers_confirm"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"
            android:background="@drawable/button_blue_default"/>
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="115dp"
            android:layout_height="39dp"
            android:text="@string/foreseers_cancel"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sp_16"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_blue_presed"/>
    </LinearLayout>

</LinearLayout>
