<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

<android.support.v7.widget.CardView
    android:id="@+id/cardView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardCornerRadius="20dp"
  >

    <ImageView
        android:id="@+id/img_finish"
        android:layout_width="20dp"
        android:layout_height="20dp"
       android:src="@mipmap/icon_tick_tips_07"
        android:layout_gravity="right"
        android:layout_margin="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/everyday"
            android:textColor="@color/colorBlack"
            android:textSize="40sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_tick_tips_05" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:text="@string/everyday1"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp_25" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday11"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/sp_20" />

        <TextView
            android:id="@+id/text_ok"
            android:layout_width="238dp"
            android:layout_height="58dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_blue_default"
            android:gravity="center"
            android:text="@string/everyday_ok"
            android:textColor="@color/colorWhite"
            android:textSize="30sp" />

    </LinearLayout>

</android.support.v7.widget.CardView>



    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_tick_tips_06"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@mipmap/icon_tick_tips_06"/>

            <TextView
                android:id="@+id/text_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" x  1"/>
        </LinearLayout>

        <TextView
            android:id="@+id/text_nums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everyday_text"/>
    </LinearLayout>
</LinearLayout>