<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".fragment.ChatFragment">

    <!-- TODO: Update blank fragment layout -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@mipmap/icon_header_case_01"
        android:elevation="1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textColor="@color/colorWhite" />

    </FrameLayout>

    <RadioGroup
        android:id="@+id/chat_radio_group"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/chat_radio_friend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/chat_radio"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/friend"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/chat_radio_temporary_session"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/chat_radio"
            android:button="@null"
            android:gravity="center"
            android:text="@string/temporary_session"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"/>
    </RadioGroup>

    <FrameLayout
        android:id="@+id/chat_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></FrameLayout>

</LinearLayout>