<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.foreseers.chat.activity.RemarkActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray3"
        android:orientation="vertical">
        <!--bar-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/icon_header_case_01"
            android:elevation="1dp">

            <com.foreseers.chat.view.widget.MyTitleBar
                android:id="@+id/my_titlebar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleBarLeftImage="@mipmap/icon_me_06"
                app:titleBarTitle="@string/remark">
            </com.foreseers.chat.view.widget.MyTitleBar>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="bottom"
                android:paddingLeft="15dp"
                android:paddingRight="8dp"
                android:paddingBottom="15dp"
                android:text="@string/accomplish"
                android:textColor="@color/colorWhite" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:text="@string/remark_name"
            android:textColor="@color/colorBlack" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorWhite"
            android:gravity="center_vertical"
            android:paddingLeft="12dp" />

    </LinearLayout>


    <com.foreseers.chat.view.MyView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>